<resources>
    <string name="app_name">My Application</string>

    <string name="login">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="logout">Log Out</string>

    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="retype_password">Retype Password</string>
    <string name="full_name">Fullname</string>

    <string name="submit">Submit</string>
    <string name="not_logged_in">You\'re not logged in.</string>
</resources>